--- a/src/globals.scss
+++ b/src/globals.scss
@@ -3,20 +3,26 @@ body, html{
   margin: 0;
   padding: 0;
   cursor: none;
+  -webkit-font-smoothing: antialiased;
 }
 
 > * {
   box-sizing: border-box;
   @media(min-width: 1024px){
     cursor: none;
-
   }
+}
+
+.made{
+  color: rgba(white, .3);
+  text-align: center;
+  font-size: 12px;
+  font-family: 'Palanquin Dark', sans-serif;
 }
 
 html{
   background: linear-gradient(180deg, #1C1244 0%, #1747f7 100%);
   width: 100vw;
-  //height: 100vw;
   overflow: hidden;
 }
 
