--- a/src/components/actions/actions.scss
+++ b/src/components/actions/actions.scss
@@ -1,12 +1,13 @@
 .start-game{
   width: 70%;
-  height: 30vh;
+  //height: 30vh;
   margin: 10vh auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
+  z-index: 200;
   h1{
     font-size: 6rem;
     margin-bottom: 1rem;
@@ -33,7 +34,7 @@
   }
   &:before{
     content: '';
-    z-index: 1;
+    z-index: -1;
     display: flex;
     flex-direction: column;
     align-items: center;
